# core/api-server/api/rest-api/routes/v1/execution.js
@@ -10,39 +10,28 @@
 const Execution = require('lib/service/ExecutionService');
 const express = require('express');
 
+
 const routes = function () {
     const router = express.Router();
 
     router.get('/', (req, res) => {
         res.json({ message: 'api server' });
     });
-    router.post('/v1/run/raw', (req, res, next) => {
-        const data = req.body;
-        if (!data.name) {
-            var error = new Error('invalid pipeline name');
-            error.status = 400;
-            return next(error);
-        }
-        Execution.runRaw(data).then((response) => {
+    router.post('/run/raw', (req, res, next) => {
+        Execution.runRaw(req.body).then((response) => {
             res.json(response);
         }).catch((error) => {
             res.json(error);
         });
     });
-    router.post('/v1/run/stored', (req, res, next) => {
-        const data = req.body;
-        if (!data.name) {
-            var error = new Error('invalid pipeline name');
-            error.status = 400;
-            return next(error);
-        }
-        Execution.runStored(data).then((response) => {
+    router.post('/run/stored', async (req, res, next) => {
+        Execution.runStored(req.body).then((response) => {
             res.json({ executionID: response });
         }).catch((error) => {
             return next(error);
         });
     });
-    router.get('/v1/status/:executionID', (req, res, next) => {
+    router.get('/status/:executionID', (req, res, next) => {
         const executionID = req.params.executionID;
         Execution.getJobStatus(executionID).then((response) => {
             res.json(response);
@@ -50,7 +39,7 @@ const routes = function () {
             return next(error);
         });
     });
-    router.get('/v1/results/:executionID', (req, res, next) => {
+    router.get('/results/:executionID', (req, res, next) => {
         const executionID = req.params.executionID;
         Execution.getJobResult(executionID).then((response) => {
             res.json(response);
@@ -58,15 +47,9 @@ const routes = function () {
             res.json(error);
         });
     });
-    router.post('/v1/stop', (req, res, next) => {
-        const executionID = req.body.executionID;
-        if (!executionID) {
-            var error = new Error('invalid executionID');
-            error.status = 400;
-            return next(error);
-        }
-        Execution.stop(executionID, req.body.reason).then((response) => {
-            res.json(response);
+    router.post('/stop', (req, res, next) => {
+        Execution.stopJob(req.body).then((response) => {
+            res.json({ message: 'pipeline stopped successfully' });
         }).catch((error) => {
             return next(error);
         });
