# core/api-server/api/rest-api/routes/v2/execution.js
@@ -1,0 +1,79 @@
+/*
+ * Created by nassi on 15/10/15.
+ *
+ * This module is a simple handler for /catalog route
+ * The module exports the routes function.
+ *
+ */
+
+
+const Execution = require('lib/service/ExecutionService');
+const express = require('express');
+
+const routes = function () {
+    const router = express.Router();
+
+    router.get('/', (req, res) => {
+        res.json({ message: 'api server' });
+    });
+    router.post('/run/raw', (req, res, next) => {
+        const data = req.body;
+        if (!data.name) {
+            var error = new Error('invalid pipeline name');
+            error.status = 400;
+            return next(error);
+        }
+        Execution.runRaw(data).then((response) => {
+            res.json(response);
+        }).catch((error) => {
+            res.json(error);
+        });
+    });
+    router.post('/run/stored', (req, res, next) => {
+        const data = req.body;
+        if (!data.name) {
+            var error = new Error('invalid pipeline name');
+            error.status = 400;
+            return next(error);
+        }
+        Execution.runStored(data).then((response) => {
+            res.json({ executionID: response });
+        }).catch((error) => {
+            return next(error);
+        });
+    });
+    router.get('/status/:executionID', (req, res, next) => {
+        const executionID = req.params.executionID;
+        Execution.getJobStatus(executionID).then((response) => {
+            res.json(response);
+        }).catch((error) => {
+            return next(error);
+        });
+    });
+    router.get('/results/:executionID', (req, res, next) => {
+        const executionID = req.params.executionID;
+        Execution.getJobResult(executionID).then((response) => {
+            res.json(response);
+        }).catch((error) => {
+            res.json(error);
+        });
+    });
+    router.post('/stop', (req, res, next) => {
+        const executionID = req.body.executionID;
+        if (!executionID) {
+            var error = new Error('invalid executionID');
+            error.status = 400;
+            return next(error);
+        }
+        Execution.stop(executionID, req.body.reason).then((response) => {
+            res.json(response);
+        }).catch((error) => {
+            return next(error);
+        });
+    });
+
+    return router;
+};
+
+module.exports = routes;
+
